--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,9 @@ plugins {
     id 'kotlin-android-extensions'
     id 'androidx.navigation.safeargs.kotlin'
 }
-
+ext{
+    roomVersion = "2.3.0"
+}
 android {
     compileSdk 31
 
@@ -46,6 +48,10 @@ dependencies {
     // Navigation libraries
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    // RoomDatabase
+    implementation("androidx.room:room-runtime:$roomVersion")
+    implementation("androidx.room:room-ktx:$roomVersion")
+    kapt("androidx.room:room-compiler:$roomVersion")
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
