--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,48 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext{
+        // Sdk and tools
+        compileSdkVersion = 31
+        minSdkVersion = 21
+        targetSdkVersion = 31
+
+        // App dependencies
+        appCompatVersion = '1.3.1'
+        composeVersion = '1.0.4'
+        constraintLayoutVersion = '2.1.1'
+        coreTestingVersion = '2.1.0'
+        coroutinesVersion = "1.5.2"
+        // TODO: Updating to 3.4.0 leads to dependency conflicts
+        espressoVersion = '3.3.0'
+        fragmentVersion = '1.3.6'
+        glideVersion = '4.12.0'
+        gradleVersion = '7.0.3'
+        gsonVersion = '2.8.6'
+        junitVersion = '4.13.2'
+        kotlinVersion = '1.5.31'
+        ktlintVersion = '0.37.2'
+        ktxVersion = '1.6.0'
+        lifecycleVersion = '2.3.1'
+        materialVersion = '1.4.0'
+        materialComposeAdapterVersion = '1.0.4'
+        navigationVersion = '2.3.5'
+        recyclerViewVersion = '1.2.1'
+        roomVersion = '2.3.0'
+        runnerVersion = '1.0.1'
+        truthVersion = '1.1.2'
+        testExtJunit = '1.1.3'
+        uiAutomatorVersion = '2.2.0'
+        viewPagerVersion = '1.0.0'
+        workVersion = '2.7.0'
+    }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+        classpath "com.android.tools.build:gradle:$gradleVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
